# aifunctools

./: .gitignore  README.md  pyproject.toml
aifunctools/: openai_funcs.py  parser.py  utils.py
tests/: test_basic.py  test_parser.py
